@@ -6,7 +6,7 @@
                            http://www.springframework.org/schema/beans/spring-beans-2.0.xsd">
 	<bean id="contextSource2" class="org.springframework.ldap.support.LdapContextSource" >
 		<property name="urls" value="ldap://127.0.0.1:389,ldap://127.0.0.2:389" />
-		<property name="userName" value="cn=dummy" />
+		<property name="userDn" value="cn=dummy" />
 		<property name="password" value="dummy" />
 	</bean>
 </beans>
